--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
+    "mobx": "^6.12.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
