--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
     "mobx": "^6.12.0",
+    "mobx-react-lite": "^4.0.5",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
